salesforce/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Fruit_Recipient__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fruit recipient</description>
        <label>Fruit Recipient</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Neighborhood__c</fullName>
        <label>Neighborhood</label>
        <picklist>
            <picklistValues>
                <fullName>Ballard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Seattle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West Seattle</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>Ballard_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Neighborhood__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Neighborhood__c</field>
            <operation>equals</operation>
            <value>Ballard</value>
        </filters>
        <label>Ballard Accounts</label>
    </listViews>
    <recordTypes>
        <fullName>Donation_Recipient</fullName>
        <active>true</active>
        <label>Donation Recipient</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tree_Owner</fullName>
        <active>true</active>
        <label>Tree Owner</label>
    </recordTypes>
</CustomObject>